<resources>

    <!-- app name -->
    <string name="app_name">Portfel</string>

    <!-- ui strings -->
    <!-- main activity -->
    <!-- tabs titles -->
    <string name="tab_title_market">market</string>
    <string name="tab_title_news">news</string>
    <string name="tab_title_portfolio">portfolio</string>

    <!-- market fragment -->
    <!-- headers in recycler view -->
    <string name="market_header_indices">Indices</string>
    <string name="market_header_stocks">Stocks</string>
    <!-- title and label in a dialog to add stock -->
    <string name="market_dialog_add_stock_title">Add Stock</string>
    <string name="market_dialog_add_stock_label">Enter Symbol: </string>
    <!-- snack bar text -->
    <string name="market_snackbar_text">Delete this symbol?</string>
    <string name="market_snackbar_action">Delete</string>
    <string name="market_snackbar_text_deleted">Symbol %s is successfully deleted</string>
    <string name="market_snackbar_text_deleted_error">Symbol %s can not be deleted</string>

    <!-- portfolio fragment -->
    <!-- header in recycler view -->
    <string name="portfolio_header_stocks">Portfolio Stocks</string>
    <!-- chart description-->
    <string name="portfolio_chart_description">Portfolio Value, \'000</string>

    <!-- stock detail activity-->
    <!-- headers in recycler view -->
    <string name="stock_detail_header_news">Company News</string>
    <!-- no rss feed error handlers-->
    <string name="stock_detail_no_rss_error">RSS feed not found</string>
    <string name="stock_detail_no_rss_handler">There is no Headlines data available.</string>

    <!-- stock widget -->
    <string name="widget_stock_title">Stock Quote</string>

    <!-- default stock and index symbols-->
    <!-- default index symbols-->
    <string name="index_symbol_sp500">^GSPC</string>
    <string name="index_symbol_nasdaq">^IXIC</string>
    <string name="index_symbol_nyse_amex">^XAX</string>
    <string name="index_symbol_sp500_name">S&amp;P 500</string>
    <string name="index_symbol_nasdaq_name">NASDAQ</string>
    <string name="index_symbol_nyse_amex_name">NYSE AMEX</string>
    <!-- default stock symbols-->
    <string name="stock_symbol_google">GOOG</string>
    <string name="stock_symbol_apple">AAPL</string>
    <string name="stock_symbol_yahoo">YHOO</string>
    <string name="stock_symbol_ibm">IBM</string>
    <string name="stock_symbol_facebook">FB</string>
    <string name="stock_symbol_tesla">TSLA</string>
    <string name="stock_symbol_oracle">ORCL</string>
    <string name="stock_symbol_hp">HPQ</string>
    <string name="stock_symbol_microsoft">MSFT</string>
    <string name="stock_symbol_intel">INTC</string>

    <!-- preferences -->
    <!-- time in millis of previous notification key -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_market_symbols_indices">market_symbols_index</string>
    <string name="pref_market_symbols_stocks">market_symbols_stocks</string>
    <string name="pref_portfolio_stocks">portfolio_stocks</string>

    <!-- a11y -->
    <string name="a11y_widget_stock_chart">Chart of Stock Price</string>
    <string name="a11y_activity_main_toolbar_image">NYSE Night View</string>
    <string name="a11y_activity_stock_detail_toolbar_icon">Change Icon</string>
    <string name="a11y_market_dialog_add_stock_symbol">Enter Stock Symbol</string>
    <string name="a11y_list_item_market_change_icon">Change Icon</string>
    <string name="a11y_list_item_news_image_view">News Image</string>
    <string name="a11y_list_item_news_clock_icon">Clock Icon</string>
    <string name="a11y_widget_stock_change_icon">Change Icon</string>

    <!-- settings -->
    <string name="settings_activity_label">Settings</string>
    <string name="settings_action">Settings</string>
    <!-- setting: data refreshing -->
    <string name="settings_refreshing_key">refreshing_key</string>
    <string name="settings_refreshing_title">Data Refreshing</string>
    <string name="settings_refreshing_entries_INTERVAL_HOUR">Every Hour</string>
    <string name="settings_refreshing_entries_INTERVAL_HALF_DAY">Every 12 Hours</string>
    <string name="settings_refreshing_entries_INTERVAL_DAY">Every Day</string>
    <!-- setting: notifications -->
    <string name="settings_notifications_key">notifications_key</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_summary_enabled">Enabled</string>
    <string name="settings_notifications_summary_disabled">Disabled</string>

    <!-- add id number -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


</resources>
